--- a/weather.css
+++ b/weather.css
@@ -6,16 +6,19 @@
 }
 
 #weather {
-    position: relative;
-    width: 500px;
+    position: absolute;
+    top: 0;
+    right: 50px;
+    width: 460px;
     margin: 0px auto;
-    text-align: center;
+    text-align: right;
+    overflow: hidden;
 }
 
 i {
     color: #fff;
     font-family: weather;
-    font-size: 180px;
+    font-size: 160px;
     font-weight: normal;
     font-style: normal;
     line-height: 1.0;
@@ -26,20 +29,25 @@ i {
     color: #fff;
     font-size: 120px;
     font-weight: 400;
-    text-align: center;
+    text-align: right;
     text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.3);
-      font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #weather div {
     margin-top: -18px;
-    padding-top: 10px;
+    padding: 10px;
     width: 100%;
     display: inline-block;
     color: white;
-    font-size: 22px;
+    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+    font-weight: 400;
     border-top: 2px solid rgba(255, 255, 255, 0.6);
-     text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.2);
+    background-image: linear-gradient(270deg, rgba(50, 50, 50, 0.3) 0%, rgba(255, 255, 255, 0) 85%);
+    border-bottom-right-radius: 6px;
 }
 
 #currently {
