--- a/main.css
+++ b/main.css
@@ -12,7 +12,6 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
 }
 
@@ -27,7 +26,7 @@ body {
 }
 
 #clock span {
-    font-size: 45%;
+    font-size: 40%;
 }
 
 #credits {
@@ -65,11 +64,19 @@ body {
     text-align: left;
 }
 
-.arrival div {
+.arrival > div {
     padding: 6px 12px;
     border-radius: 12px;
     display: inline-block;
     font-weight: 700;
+}
+
+.important {
+    padding: 6px 12px;
+    border-radius: 12px;
+    display: inline-block;
+    color: #333;
+    background-color: rgba(255, 165, 0, 0.8);
 }
 
 .arrival:nth-child(2) {
