--- a/weather.css
+++ b/weather.css
@@ -18,7 +18,7 @@
 i {
     color: #fff;
     font-family: weather;
-    font-size: 160px;
+    font-size: 150px;
     font-weight: normal;
     font-style: normal;
     line-height: 1.0;
@@ -27,7 +27,7 @@ i {
 #weather h2 {
     margin: 0 0 8px;
     color: #fff;
-    font-size: 120px;
+    font-size: 110px;
     font-weight: 400;
     text-align: right;
     text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.3);
@@ -36,22 +36,22 @@ i {
 
 #weather div {
     margin-top: -18px;
-    padding: 10px;
+    padding: 10px 15px;
     width: 100%;
     display: inline-block;
     color: white;
     font-size: 24px;
-    font-family: 'Open Sans', sans-serif;
+   font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
     font-weight: 400;
     border-top: 2px solid rgba(255, 255, 255, 0.6);
-    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(270deg, rgba(50, 50, 50, 0.3) 0%, rgba(255, 255, 255, 0) 85%);
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+    background-image: linear-gradient(270deg, rgba(255, 255, 255, 0.4) 20%, rgba(255, 255, 255, 0) 95%);
     border-bottom-right-radius: 6px;
 }
 
 #currently {
-    text-transform: lowercase;
+    text-transform: ;
 }
 
 .icon-0:before {
