--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ body {
 }
 
 #buses {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     font-family: 'Montserrat', sans-serif;
 }
@@ -95,6 +95,14 @@ body {
     border-radius: 12px;
     display: inline-block;
     font-weight: 700;
+}
+
+.supimportant {
+    padding: 6px 12px;
+    border-radius: 12px;
+    display: inline-block;
+    color: #333;
+    background-color: rgba(255, 165, 0, 0.8);
 }
 
 .important {
