--- a/main.css
+++ b/main.css
@@ -13,11 +13,10 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #clock {
-    font-family: 'Montserrat', sans-serif;
     font-size: 320px;
     color: white;
     text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
@@ -28,6 +27,18 @@ body {
 
 #clock span {
     font-size: 40%;
+}
+
+#date {
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    font-size: 45px;
+    margin-top: -60px;
+    margin-bottom: 20px;
+    color: white;
+    text-align: left;
+    padding-left: 80px;
+    text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 #credits {
@@ -70,6 +81,7 @@ body {
     text-align: inherit;
     box-sizing: border-box;
     margin-bottom: 10px;
+    transition: opacity .6s, height .6s, font-size .6s;
 }
 
 .arrival:nth-child(2) {
@@ -90,19 +102,16 @@ body {
     font-size: 40px;
 }
 
-.arrival > div {
+.busName {
     padding: 6px 12px;
     border-radius: 12px;
     display: inline-block;
     font-weight: 700;
 }
 
-.supimportant {
-    padding: 6px 12px;
-    border-radius: 12px;
+.delta {
+    padding: 0;
     display: inline-block;
-    color: #333;
-    background-color: rgba(255, 165, 0, 0.8);
 }
 
 .important {
@@ -111,6 +120,7 @@ body {
     display: inline-block;
     color: #333;
     background-color: rgba(255, 165, 0, 0.8);
+    font-weight: 700;
 }
 
 .title {
