--- a/weather.css
+++ b/weather.css
@@ -7,7 +7,7 @@
 
 #weather {
     position: absolute;
-    top: 50px;
+    top: 10px;
     right: 50px;
     width: 460px;
     margin: 0px auto;
@@ -16,12 +16,14 @@
 }
 
 i {
+    margin-top: -30px;
     color: #fff;
     font-family: weather;
     font-size: 150px;
     font-weight: normal;
     font-style: normal;
     line-height: 1.0;
+    vertical-align: bottom;
 }
 
 #weather h2 {
@@ -35,7 +37,7 @@ i {
 }
 
 #weather div {
-    margin-top: -18px;
+    margin-top: 0;
     padding: 10px 15px;
     width: 100%;
     display: inline-block;
